# ModuloERP_Kopkar

./: README.md  pyproject.toml
.github/workflows/: ci.yml
kopkar/: hooks.py  modules.txt
kopkar/mod/doctype/kol/: kol.js  kol.json  kol.py  test_kol.py
kopkar/mod/doctype/tjok/: test_tjok.py  tjok.js  tjok.json  tjok.py
kopkar/moduloerp_kopkar/: api.py
kopkar/moduloerp_kopkar/doctype/chart_of_account/: chart_of_account.js  chart_of_account.json  chart_of_account.py  test_chart_of_account.py
kopkar/moduloerp_kopkar/doctype/stnk/: api.py  stnk.js  stnk.json  stnk.py  test_stnk.py
kopkar/ref/doctype/user_kopkar/: test_user_kopkar.py  user_kopkar.js  user_kopkar.json  user_kopkar.py
kopkar/stnk/doctype/pembelian_stnk/: api.py  pembelian_stnk.js  pembelian_stnk.json  pembelian_stnk.py  test_pembelian_stnk.py
kopkar/stnk/doctype/penjualan_stnk/: api.py  penjualan_stnk.js  penjualan_stnk.json  penjualan_stnk.py  test_penjualan_stnk.py
kopkar/toko/doctype/transaksi_toko/: test_transaksi_toko.py  transaksi_toko.js  transaksi_toko.json  transaksi_toko.py
